--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "@ant-design/icons": "5.3.0",
     "antd": "5.13.2",
-  "next": "13.4.19",
-  "prop-types": "^15.8.1",
-  "react": "18.2.0",
-  "react-dom": "18.2.0"
+    "jwt-decode": "^4.0.0",
+    "next": "13.4.19",
+    "prop-types": "^15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
