--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@ant-design/icons": "5.3.0",
     "antd": "5.13.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.471.1",
     "next": "13.4.19",
     "prop-types": "^15.8.1",
+    "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
